--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,8 +15,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "run-tests"
+  run-tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,8 +26,11 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs the tests
+      - name: Say hello
+        run:
+          echo "Hello world"
       - name: Run PyTest
         run: 
-          |
+          |  # Multi-line run
           pip install pytest
           pytest test.py
